--- a/static/styles.css
+++ b/static/styles.css
@@ -326,3 +326,89 @@ button:hover,
     margin: 0 auto;
     padding: 20px;
 }
+
+
+.album-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.album-card {
+    border: 1px solid black;
+    padding: 15px;
+    margin: 10px;
+    text-align: center;
+    width: 200px;
+    transition: transform 0.3s ease;
+}
+
+.album-card img {
+    width: 100%;
+    height: auto;
+    border-bottom: 1px solid #000;
+}
+
+.album-card h3 {
+    font-size: 18px;
+    margin: 10px 0;
+}
+
+.album-card p {
+    font-size: 14px;
+}
+
+.album-card:hover {
+    transform: scale(1.05);
+    background-color: #f9f9f9;
+}
+.band-container {
+    display: flex;
+    flex-wrap: wrap; /* Allow items to wrap onto multiple lines */
+    justify-content: center; /* Center the cards in the container */
+    gap: 20px; /* Add spacing between the cards */
+    padding: 20px;
+}
+
+.band-card {
+    width: 30%; /* Ensure each card takes up about a third of the row */
+    max-width: 300px; /* Optional: set a maximum width for larger screens */
+    margin: 10px;
+    background-color: #f0f0f0;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 15px;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+}
+/* Hover effect for band cards */
+.band-card:hover {
+    transform: scale(1.05);
+    background-color: #1D1D1F; /* Dark background on hover */
+    color: #FBFBFD; /* Light text on hover */
+    
+}
+
+/* Band image inside the card */
+.band-card img {
+    width: 100%; /* Ensure the image takes the full width of the card */
+    height: 200px; /* Set a fixed height */
+    object-fit: cover; /* Ensure the image scales and crops to fit the area without distortion */
+    border-radius: 8px;
+    margin-bottom: 10px;
+}
+
+/* Band name styling */
+.band-card h3 {
+    font-size: 18px;
+    font-weight: bold;
+    color: #1D1D1F; /* Dark text color */
+    transition: color 0.3s ease;
+}
+
+/* Change text color on hover */
+.band-card:hover h3 {
+    color: #FBFBFD; /* Light text color on hover */
+}
