--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -109,7 +109,7 @@
                 <li><a href="{{ url_for('albums') }}" class="{% if request.endpoint == 'albums' %}active{% endif %}">Albums</a></li>
                 <li><a href="{{ url_for('genre') }}" class="{% if request.endpoint == 'genre' %}active{% endif %}">Genre</a></li>
                 <li><a href="{{ url_for('timeline') }}" class="{% if request.endpoint == 'timeline' %}active{% endif %}">Timeline</a></li>
-                
+                <li><a href="{{ url_for('account') }}" class="{% if request.endpoint == 'account' %}active{% endif %}">{{ session['username'] }}</a></li>
             </ul>
         </nav>
     </header>
