--- a/static/styles.css
+++ b/static/styles.css
@@ -412,3 +412,58 @@ button:hover,
 .band-card:hover h3 {
     color: #FBFBFD; /* Light text color on hover */
 }
+
+form {
+    margin: 20px 0;
+    text-align: center;
+}
+
+select {
+    padding: 10px;
+    font-size: 16px;
+}
+
+.page-title {
+    font-size: 36px;
+    margin-bottom: 20px;
+    font-family: 'Arial Black', sans-serif;
+    color: #333;
+}
+.album-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 20px;
+}
+.album-title {
+    font-size: 20px;
+    font-weight: bold;
+    color: #333;
+    margin-top: 15px;
+    margin-bottom: 10px;
+}
+.album-year {
+    font-size: 16px;
+    color: #777;
+}
+
+.back-button {
+    text-align: center;
+    margin: 20px 0; 
+}
+
+.back-button .btn {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    color: #1D1D1F; 
+    background-color: #FBFBFD; 
+    border: 2px solid #1D1D1F;
+    text-decoration: none; 
+    border-radius: 5px; 
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.back-button .btn:hover {
+    background-color: #1D1D1F;
+    color: #FBFBFD; 
+}
